--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -5,11 +5,16 @@
 		<title>AppMicroServicio</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<!-- Cargat React -->
+		<script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
+		<script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
+		<script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+		<script type="text/babel" src="conexion.js"></script>
 	</head>
 
 	<body>
-		<div>
-			Bienvenidos!
+		<div id="root">
+			
 		</div>
 	</body>
 </html>
