--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -28,11 +28,11 @@
 			</div>
 
 
-			<button type="button" class="btn btn-primary btn-lg btn-block" onClick="getValueInput()">Primary</button>
+			<button type="button" class="btn btn-primary btn-lg btn-block" onClick="getValueInput()">Buscar</button>
 
 		</form>
 	</div>
-	<h3>Tabla :</h3>
+	<h5>Tabla <small class="text-muted">Se muestra como resultado la tabla con el identificador a buscar.</small></h5>
 	<div id="tablaIdentificador"></div>
 </body>
 
